# libsysml

./: CMakeLists.txt  Dockerfile  LICENSE  build.sh  docker-compose.yml  install_build_deps.sh
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  annotation.hpp  config_kerml.hpp  element.cpp  element.hpp  element_collection.hpp  element_def.hpp  expression.hpp  kerml_ast.hpp  kerml_ast_adapted.hpp  model.hpp  relationship.hpp  specialization.hpp  sysml.cpp  sysml.hpp  sysml_ast.hpp  sysml_namespace.hpp  sysml_parser.hpp  sysml_test.cpp
src/test_data/: test_1.sysml  test_2.sysml
