include(FetchContent)

#FetchContent_Declare(
#  sfml
#  GIT_REPOSITORY "https://github.com/SFML/SFML"
#  GIT_TAG 2f11710abc5aa478503a7ff3f9e654bd2078ebab # 2.5.1
#)

#add_subdirectory(sfml)

#FetchContent_Declare(
#  sdl2
#  GIT_REPOSITORY "https://github.com/libsdl-org/SDL"
#  GIT_TAG 53dea9830964eee8b5c2a7ee0a65d6e268dc78a1 # 2.0.22
#)

#add_subdirectory(sdl2)
